Fix over spill of subject tags

--- a/src/components/video/card/VideoCardTagList.less
+++ b/src/components/video/card/VideoCardTagList.less
@@ -10,5 +10,6 @@
 
   &__subjects-container {
     display: flex;
+    flex-wrap: wrap;
   }
 }
